--- a/configs/512x512_EfNets_ce_regress-flow.yaml
+++ b/configs/512x512_EfNets_ce_regress-flow.yaml
@@ -7,10 +7,10 @@ DATASET:
     AUG:
       FLIP: false
       SHIFT_FACTOR:
-        - 0.0
-        - 0.0
-      ROT_FACTOR: 0
-      SCALE_FACTOR: 0.0
+        - 0.05
+        - 0.1
+      ROT_FACTOR: 5
+      SCALE_FACTOR: 0.1
       NUM_JOINTS_HALF_BODY: 0
       PROB_HALF_BODY: 0
   VAL:
@@ -26,7 +26,7 @@ DATASET:
     DET_FILE: './exp/json/test_det_rcnn.json'
 DATA_PRESET:
   TYPE: 'cephalograms'
-  SIGMA: 3
+  SIGMA: 2
   NUM_JOINTS: 19
   IMAGE_SIZE:
   - 512
@@ -35,27 +35,25 @@ DATA_PRESET:
   - 128
   - 128
 MODEL:
-  TYPE: 'RegressFlow'
+  TYPE: 'RegressFlow_EFNetv2_m'
   PRETRAINED:  ''
   TRY_LOAD: ''
   NUM_FC_FILTERS:
   - -1
   HIDDEN_LIST: -1
-  NUM_LAYERS: 50
 LOSS:
   TYPE: 'RLELoss'
 TEST:
   HEATMAP2COORD: 'coord'
 TRAIN:
   WORLD_SIZE: 2
-  BATCH_SIZE: 4
+  BATCH_SIZE: 12
   BEGIN_EPOCH: 0
-  END_EPOCH: 2000
+  END_EPOCH: 10000
   OPTIMIZER: 'adam'
-  LR: 0.001
-  LR_FACTOR: 0.3
+  LR: 0.0005
+  LR_FACTOR: 0.1
   LR_STEP:
-  - 400
-  - 800
-  - 1200
+  - 600
+  - 1000
   - 1600
